--- a/assets/custom.css
+++ b/assets/custom.css
@@ -46,3 +46,17 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+/* Custom Code */
+
+.box{
+      background-color: aliceblue;
+      width: 50px;
+      height: 50px;
+      z-index: 100;
+      display: inline-block;
+      margin: 10px;
+    }
+
+
+
