--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -50,13 +50,18 @@ table {
 /* Custom Code */
 
 .box{
-      background-color: aliceblue;
-      width: 50px;
-      height: 50px;
-      z-index: 100;
-      display: inline-block;
-      margin: 10px;
+	background-color: aliceblue;
+      	width: 50px;
+      	height: 50px;
+      	z-index: 100;
+      	display: inline-block;
+      	margin: 10px;
+      	cursor: pointer;
+	border-radius: 5px;
     }
+.box:hover {
+    	background-color: #82baea;
+}
 	.box > p{
 		text-align: center;
     		padding-top: 18px;
