--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -67,3 +67,12 @@ table {
 		text-align: center;
     		padding-top: 18px;
 	}
+.bgcontainer {
+    border: 1px solid cornflowerblue;
+    min-height: 250px;
+    background: 
+	    linear-gradient(45deg, #eeff 50%,transparent 50%) center center /100% 100%, 
+	    url(https://via.placeholder.com/1024x768/77eeff/ffffff/?text=myback) right center / 50% 100%;
+    overflow: hidden;
+    background-position: right,left;
+}
