--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -76,3 +76,11 @@ table {
     overflow: hidden;
     background-position: right,left;
 }
+.bgcontainer:hover {
+    background-color: #1fc8db;
+    background-image: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 50%, #2cb5e8 75%);
+    color: white;
+    opacity: 0.95;
+}
+.bgcontainer p{
+}
