--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -102,5 +102,8 @@ table {
     animation-duration: 2s;
 }
 @keyframes rotate {
-  100% { -webkit-transform: rotate(360deg); transform:rotate(360deg);
+    50% { -webkit-transform: rotate(360deg); transform:rotate(360deg);}
+    100%{transform: translateX(100px);}
 }
+
+	
