--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -102,12 +102,14 @@ table {
     animation-duration: 2s;
     animation-direction: alternate;
     animation-iteration-count: infinite;  
+    animation-timing-function: linear;
 }
 .BB:nth-child(2):hover {
     animation-name: rotate3D;
     animation-duration: 2s;
     animation-direction: alternate;
     animation-iteration-count: infinite;  
+    animation-timing-function: linear;
 }
 @keyframes rotate {
     80% { -webkit-transform: rotate(1080deg); transform:rotate(1080deg);}
