--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -128,7 +128,7 @@ table {
   color:linen;  
   bakeground-color:lightblue;
 }
-#mwbox > p{
+#mwbox p {
     font-size:5vw;
     direction: rtl;
     unicode-bidi: bidi-override;
