--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -121,16 +121,18 @@ table {
     100%{transform: translateX(1000px);}
 }
 
-/* My word*.
+/* My word */
 #mwbox{
   margin:5px;
   padding:5px;
   color:linen;  
   bakeground-color:lightblue;
 }
-#mwbox p {
+#mwbox > p{
     font-size:5vw;
     direction: rtl;
     unicode-bidi: bidi-override;
 }
+
+
 	
