--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -126,7 +126,7 @@ table {
   margin:5px;
   padding:5px;
   color:linen;  
-  bakeground-color:lightblue;
+  background-color:lightblue;  
 }
 #mwbox > p{
     font-size:5vw;
