--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -146,6 +146,9 @@ table {
     display: inline;
     writing-mode: vertical-rl;
     text-indent: 20px;
+    color: aliceblue;
+    text-shadow: 0px 0px 30px #00a7f7;
+}
 }	
 #pmbox > p:first-child{
 	text-indent: 60px;
