--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -137,7 +137,9 @@ table {
 #pmbox{
   margin:5px;
   padding:5px;   
-  background: linear-gradient(165deg,#2196f3ff,#2196f300);
+  height:300px;
+  /*background: linear-gradient(165deg,#2196f3ff,#2196f300);*/
+  background: linear-gradient(145deg,#2196f3ff 10%,#00a7f700 30%,#00a7f777 60%,#00a7f700 80%);
 }
 #pmbox > p{
     float: right;
