--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -160,4 +160,15 @@ table {
 #pmbox > p:first-child{
 	text-indent: 60px;
 }
+/*scroll OUT S*/
+[data-scroll] {
+  transition: opacity 1s;
+}
+[data-scroll="in"] {
+  opacity: 1;
+}
+[data-scroll="out"] {
+  opacity: 0;
+}
+/*scroll OUT E*/
 
